src/content/docs/ko/sdk/android/v4/features/short-links.mdx
---
title: "숏 브랜드 링크 해석"
description: "Campaign Lab에서 생성된 숏 링크를 해석합니다."
slug: "en/sdk/android/v4/features/short-links"
versions: 
    - 
        label: "v5"
        value: "v5"
        default: true
    - 
        label: "v4"
        value: "v4"
redirects: 
    v5: "/en/sdk/android/features/short-links"
---
Adjust의 [링크 단축 솔루션](https://help.adjust.com/en/article/short-branded-links)은 복잡하고 긴 링크를 간결한 링크로 만들어줍니다. 숏 링크는 딥링크와 캠페인 정보를 유지하며, 사용자가 아직 앱을 설치하지 않은 경우 앱 스토어로 라우팅합니다.

이 섹션에서 설명된 방법을 사용하여 숏 링크를 해석하시기 바랍니다.

Adjust SDK에서 다이렉트 딥링크 설정 \{\#set\-up\-deep\-linking\-in\-the\-adjust\-sdk\}
-------------------------------------------------------------------------------------

Adjust SDK에서 다음에 대한 지원을 추가합니다.

* [URI 스킴](/en/sdk/android/features/deep-links)
* [디퍼드 딥링크](/en/sdk/android/features/deep-links#deferred-deep-linking)

<callout type="note"> 

Adjust의 링크 단축 솔루션을 사용하기 위해 [링크 해석](/en/sdk/android/features/deep-links#link-resolution)을 별도로 설정할 필요는 없습니다.
</Callout> 

단축 링크 해석을 위한 Adjust SDK 설정 \{\#set\-up\-the\-adjust\-sdk\-to\-resolve\-short\-links\}
------------------------------------------------------------------------------------------------

<codeblock title="메서드 서명"> 

```java
public static void processDeeplink(Uri url, Context context, OnDeeplinkResolvedListener callback)
```

</CodeBlock> 

Adjust SDK는 `onCreate` 또는 `onNewIntent` 메서드를 사용하여 활동의 인텐트 객체 내에서 딥링크 정보를 전달합니다. 딥링크는 `intent` 객체의 `data` 속성에서 이용 가능합니다. 앱이 실행되고 두 메서드 중 하나가 실행된 후에 딥링크 콘텐츠에 액세스할 수 있습니다. `processDeeplink` 메서드를 호출하여 사용자를 앱으로 딥링크한 단축 Adjust 링크 URL을 확인합니다.
<tabs> <tab title="Kotlin" sync="kotlin"> 

```kotlin
override fun onCreate(savedInstanceState: Bundle?) {
   super.onCreate(savedInstanceState)
   setContentView(R.layout.activity_main)

   val intent = intent
   val webpageURL = intent.data
   Adjust.processDeeplink(webpageURL, this) { resolvedLink ->
      // resolvedLink contains either resolved URL (if it was unshortened)
      // or just echoed URL if it was not shortened
      Log.d("Example", resolvedLink)
   }
}
```

</Tab> <tab title="Java" sync="java"> 

```java
@Override
protected void onCreate(Bundle savedInstanceState) {
   super.onCreate(savedInstanceState);
   setContentView(R.layout.activity_main);

   Intent intent = getIntent();
   Uri webpageURL = intent.getData();
   Adjust.processDeeplink(webpageURL, this, new   OnDeeplinkResolvedListener() {
      @Override
      public void onDeeplinkResolved(String resolvedLink) {
            // resolvedLink contains either resolved URL (if it was unshortened)
            // or just echoed URL if it was not shortened
            Log.d("Example", resolvedLink);
      }
   });
}
```

</Tab> </Tabs> <tabs> <tab title="Kotlin" sync="kotlin"> 

```kotlin
override fun onNewIntent(intent: Intent?) {
   super.onNewIntent(intent)

   val webpageURL = intent.data
   Adjust.processDeeplink(webpageURL, this) { resolvedLink ->
      // resolvedLink contains either resolved URL (if it was unshortened)
      // or just echoed URL if it was not shortened
      Log.d("Example", resolvedLink)
   }
}
```

</Tab> <tab title="Java" sync="java"> 

```java
@Override
protected void onNewIntent(Intent intent) {
   super.onNewIntent(intent);

   Uri webpageURL = intent.getData();
   Adjust.processDeeplink(webpageURL, this, new   OnDeeplinkResolvedListener() {
      @Override
      public void onDeeplinkResolved(String resolvedLink) {
            // resolvedLink contains either resolved URL (if it was unshortened)
            // or just echoed URL if it was not shortened
            Log.d("Example", resolvedLink);
      }
   });
}
```

</Tab> </Tabs> 

`processDeeplink` 메서드로 전송된 링크가 단축된 경우, `resolvedLink` 는 단축 이전 원본 링크를 반환합니다. 메서드에 전달한 링크가 단축되지 않은 경우 `resolvedLink` 에는 전달한 링크와 동일한 링크가 포함됩니다.

